--- a/example/package.json
+++ b/example/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "6.1.2",
     "@react-navigation/native-stack": "6.9.8",
     "@react-navigation/stack": "6.3.29",
+    "@realm/react": "0.6.2",
     "@shopify/flash-list": "1.4.3",
     "@types/react-native-video": "5.0.19",
     "aws-sdk": "2.1380.0",
