--- a/cbc/ios/cbc/Info.plist
+++ b/cbc/ios/cbc/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>likeminds_chat_reactnative_traya</string>
+	<string>cbc</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
