--- a/cbc/package.json
+++ b/cbc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "likeminds_chat_reactnative_traya",
+  "name": "cbc",
   "version": "0.5.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@giphy/react-native-sdk": "2.1.3",
-    "@likeminds.community/chat-rn": "1.5.1",
-    "@likeminds.community/chat-rn-core": "0.5.8",
+    "@likeminds.community/chat-rn-beta": "1.1.7",
+    "@likeminds.community/chat-rn-core": "file:../likeminds-chat-reactnative-integration/likeminds.community-chat-rn-core-1.0.3.tgz",
     "@notifee/react-native": "7.6.1",
     "@react-native-clipboard/clipboard": "1.11.2",
     "@react-native-community/datetimepicker": "7.4.1",
