--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@giphy/react-native-sdk": "2.1.3",
     "@likeminds.community/chat-rn": "1.5.8",
-    "@likeminds.community/chat-rn-core": "file:../likeminds-chat-reactnative-integration/likeminds.community-chat-rn-core-1.1.0.tgz",
+    "@likeminds.community/chat-rn-core": "1.1.0",
     "@notifee/react-native": "7.6.1",
     "@react-native-clipboard/clipboard": "1.11.2",
     "@react-native-community/datetimepicker": "7.4.1",
@@ -25,7 +25,7 @@
     "@react-navigation/native-stack": "6.9.8",
     "@react-navigation/stack": "6.3.29",
     "@realm/react": "0.6.2",
-    "@shopify/flash-list": "^1.6.4",
+    "@shopify/flash-list": "1.6.4",
     "@types/react-native-video": "5.0.19",
     "aws-sdk": "2.1380.0",
     "diff": "5.1.0",
@@ -49,7 +49,7 @@
     "react-native-permissions": "3.10.1",
     "react-native-reanimated": "3.4.2",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "^3.31.1",
+    "react-native-screens": "3.31.1",
     "react-native-shimmer-placeholder": "2.0.9",
     "react-native-svg": "13.9.0",
     "react-native-swiper-flatlist": "3.2.2",
