--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,7 @@
     "@likeminds.community/chat-rn": "1.5.8",
     "@likeminds.community/chat-rn-core": "1.1.0",
     "@notifee/react-native": "7.6.1",
+    "@react-native-async-storage/async-storage": "1.24.0",
     "@react-native-clipboard/clipboard": "1.11.2",
     "@react-native-community/datetimepicker": "7.4.1",
     "@react-native-community/slider": "4.4.3",
@@ -36,7 +37,7 @@
     "react-native-audio-recorder-player": "3.6.4",
     "react-native-blob-util": "0.19.2",
     "react-native-compressor": "1.6.1",
-    "react-native-create-thumbnail": "1.6.4",
+    "react-native-create-thumbnail": "2.0.0",
     "react-native-device-info": "10.4.0",
     "react-native-document-picker": "8.2.0",
     "react-native-gesture-handler": "2.9.0",
