--- a/likeminds-chat-reactnative-integration/Jenkinsfile
+++ b/likeminds-chat-reactnative-integration/Jenkinsfile
@@ -35,8 +35,9 @@ pipeline {
         stage('Install Dependencies') {
             steps {
                 dir('likeminds-chat-reactnative-integration'){
-                    sh 'npm uninstall @likeminds.community/chat-rn'
                     sh 'npm install'
+                    sh 'npm uninstall @likeminds.community/chat-rn'
+                    sh 'npm install $chat_rn_package_FILENAME'
                 }
             }
         }
