--- a/likeminds-chat-reactnative-integration/Jenkinsfile
+++ b/likeminds-chat-reactnative-integration/Jenkinsfile
@@ -67,10 +67,10 @@ pipeline {
         }
     }
     
-    // post{
-    //     always{
-    //         cleanWs()
-    //     }
-    // }
+    post{
+        always{
+            cleanWs()
+        }
+    }
 
 }
