--- a/.github/workflows/create_tag_and_release.yml
+++ b/.github/workflows/create_tag_and_release.yml
@@ -38,15 +38,7 @@ jobs:
                 exit 1
               fi
         - name: Push Git Tag
-          run: |
-                # Git login
-                git config --global user.name "$(git log -n 1 --pretty=format:%an)"
-                git config --global user.email "$(git log -n 1 --pretty=format:%ae)"
-        
-                # Push a Git tag with the new version
-                export current_version=$(cat package.json | grep '"version":' | awk -F'"' '{print $4}')
-                git tag -a "v$current_version" -m "Version $current_version"
-                git push origin "v$current_version"
+          run: echo "test"
           env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     create-github-release:
@@ -62,6 +54,6 @@ jobs:
             fetch-depth: 0
                 
         - name: Create Release
-          run: gh release create "$(git describe --tags --abbrev=0)" --generate-notes
+          run: echo "test"
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
