--- a/.github/workflows/create_tag_and_release.yml
+++ b/.github/workflows/create_tag_and_release.yml
@@ -1,9 +1,7 @@
 name: Publish Create Tag and Git Release
 
 on:
-    push:
-        branches:
-            - "master"
+  workflow_dispatch: # Allows manual triggering of the action remotely
 
 permissions: write-all
 
@@ -15,6 +13,7 @@ jobs:
     create_tag:
         name: Create Git Tag
         runs-on: ubuntu-latest
+        if: github.ref == 'refs/heads/bugfix/LM-12380_chatStabilityBugs'
         steps:
         - name: Checkout code
           uses: actions/checkout@v3
@@ -44,6 +43,7 @@ jobs:
     create-github-release:
         name: Create GitHub Release
         runs-on: ubuntu-latest
+        if: github.ref == 'refs/heads/bugfix/LM-12380_chatStabilityBugs'
         needs: create_tag
         permissions:
             contents: write
