--- a/ai-chatbot/package.json
+++ b/ai-chatbot/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@giphy/react-native-sdk": "2.1.3",
-    "@likeminds.community/chat-rn": "file:../../../untitled/dummyApp/likeminds-chat-reactnative-data/likeminds.community-chat-rn-1.7.0.tgz",
-    "@likeminds.community/chat-rn-core": "file:../likeminds-chat-reactnative-integration/likeminds.community-chat-rn-core-1.4.0.tgz",
+    "@likeminds.community/chat-rn": "1.8.0",
+    "@likeminds.community/chat-rn-core": "1.5.0",
     "@notifee/react-native": "7.6.1",
     "@react-native-clipboard/clipboard": "1.11.2",
     "@react-native-community/datetimepicker": "7.4.1",
@@ -47,7 +47,7 @@
     "react-native-pager-view": "6.1.4",
     "react-native-pdf-thumbnail": "1.2.1",
     "react-native-permissions": "3.10.1",
-    "react-native-reanimated": "^3.6.1",
+    "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "3.31.1",
     "react-native-shimmer-placeholder": "2.0.9",
@@ -56,7 +56,6 @@
     "react-native-tab-view": "3.5.0",
     "react-native-track-player": "4.0.1",
     "react-native-video": "5.2.1",
-    "reactotron-react-native": "^5.1.10",
     "realm": "11.10.2",
     "rn-emoji-keyboard": "1.2.1"
   },
