--- a/community-hybrid-chat/package.json
+++ b/community-hybrid-chat/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@giphy/react-native-sdk": "2.1.3",
-    "@likeminds.community/chat-rn": "1.8.0",
-    "@likeminds.community/chat-rn-core": "1.6.0",
+    "@likeminds.community/chat-rn": "^1.8.0",
+    "@likeminds.community/chat-rn-core": "file:../likeminds-chat-reactnative-integration/likeminds.community-chat-rn-core-1.6.0.tgz",
     "@notifee/react-native": "7.6.1",
     "@react-native-clipboard/clipboard": "1.11.2",
     "@react-native-community/datetimepicker": "7.4.1",
@@ -56,6 +56,7 @@
     "react-native-tab-view": "3.5.0",
     "react-native-track-player": "4.0.1",
     "react-native-video": "5.2.1",
+    "reactotron-react-native": "^5.1.11",
     "realm": "11.10.2",
     "rn-emoji-keyboard": "1.2.1"
   },
