--- a/community-hybrid-chat/package.json
+++ b/community-hybrid-chat/package.json
@@ -28,6 +28,7 @@
     "@shopify/flash-list": "1.6.4",
     "@types/react-native-video": "5.0.19",
     "aws-sdk": "2.1380.0",
+    "command": "file:../likeminds-chat-reactnative-integration/command-0.0.5.tgz",
     "diff": "5.1.0",
     "firebase": "9.17.1",
     "lottie-react-native": "6.4.0",
