--- a/community-hybrid-chat/package.json
+++ b/community-hybrid-chat/package.json
@@ -1,6 +1,6 @@
 {
   "name": "example",
-  "version": "1.9.0",
+  "version": "1.10.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@giphy/react-native-sdk": "2.1.3",
-    "@likeminds.community/chat-rn": "1.9.0",
-    "@likeminds.community/chat-rn-core": "1.9.0",
+    "@likeminds.community/chat-rn": "1.10.0",
+    "@likeminds.community/chat-rn-core": "1.10.0",
     "@notifee/react-native": "7.6.1",
     "@react-native-clipboard/clipboard": "1.11.2",
     "@react-native-community/datetimepicker": "7.4.1",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "4.4.3",
     "@react-native-firebase/app": "18.1.0",
     "@react-native-firebase/messaging": "18.1.0",
