--- a/likeminds-chat-reactnative-integration/package.json
+++ b/likeminds-chat-reactnative-integration/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@likeminds.community/chat-rn-core",
-  "version": "1.9.0",
-  "versionCode": "25",
-  "versionName": "1.9.0",
+  "version": "1.10.0",
+  "versionCode": "26",
+  "versionName": "1.10.0",
   "description": "LikeMinds ReactNative Core SDK for chat",
   "scripts": {
     "android": "react-native run-android",
@@ -20,10 +20,10 @@
   "homepage": "https://likeminds.community/",
   "license": "ISC",
   "dependencies": {
-    "@likeminds.community/chat-rn": "1.9.0",
-    "@react-native/babel-preset": "0.74.0",
+    "@likeminds.community/chat-rn": "1.10.0",
     "diff": "5.1.0",
-    "realm": "11.10.2"
+    "realm": "11.10.2",
+    "typescript": "5.6.2"
   },
   "peerDependencies": {
     "@giphy/react-native-sdk": ">=2.1.3",
@@ -39,7 +39,6 @@
     "@react-navigation/native-stack": ">=6.9.8",
     "@react-navigation/stack": ">=6.3.29",
     "@shopify/flash-list": ">=1.4.3",
-    "@types/react-native-video": ">=5.0.14",
     "aws-sdk": ">=2.1380.0",
     "firebase": ">=9.17.1",
     "lottie-react-native": ">=6.4.0",
@@ -94,8 +93,10 @@
     "preset": "react-native"
   },
   "devDependencies": {
-    "@react-native-community/netinfo": ">=9.3.10",
+    "@react-native-community/netinfo": ">=11.3.0",
+    "@types/node": "^20.11.24",
     "microbundle": ">=0.15.1",
+    "react": ">=18.2.0",
     "react-native": ">=0.71.1"
   },
   "repository": {
